Removed old cells

--- a/Chapter 2 - Exercise.ipynb
+++ b/Chapter 2 - Exercise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2.1"
+    "# Exercise 2.1"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some m"
+    "## Some more fun"
    ]
   },
   {
@@ -310,24 +310,6 @@
     "\n",
     "$P(V_2|V_1)=\\frac{P(V_2V_1)}{P(V_1)}$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -393,287 +375,6 @@
    "source": [
     "0.5*(3./5*(29./39+20./40) + 2./5*(30./40+19./39))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is not totally obvious is that our old posterior $P(B_i|V_1)$ is now our new prior. We are reusing our old results to update our new knowledge."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We already calculated the part for the bowl 1 above, just need the second bowl\n",
-    "\n",
-    "$P(B_2,V_1,V_2)=P(V_2|B_2,V_1)P(B_2,V_1)=P(V_2|B_2,V_1)P(B_2|V_1)P(V_1)=\\frac{19}{39}\\frac{20}{40}\\frac{1}{2}=\\frac{38}{312}$\n",
-    "\n",
-    "$P(V_1,V_2)=\\frac{87}{312}+\\frac{38}{312}=\\frac{125}{312}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(B_1|V_1,V_2)=\\frac{P(B_1, V_1, V_2)}{P(V_1, V_2)}=\\frac{\\frac{87}{312}}{\\frac{125}{312}}=\\frac{87}{125}=69.6\\%$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is now a probability of 69.6% that we chose the first bowl and 30.4% for the second bowl."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now if we were to eat that cookie and pick an urn at random and pick another cookie, there are two questions we can ask:\n",
-    "1. What is the probability that the second cookie, let's call it $V_2$, is vanilla\n",
-    "2. What is the probability that both cookies come from the bowl 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(V_2V_1)=\\sum_i{P(V_2V_1B_i)}=\\sum_i{P(V_2|V_1B_i)P(V_1B_i)}=\\sum_i{P(V_2|V_1B_i)P(B_i|V_1)P(V_1)}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(C_2=V,C_1=V)= \\\\\n",
-    "\\sum_y\\sum_x{P(C_2=V,C_1=V,B_1=B_x,B_2=B_y)}= \\\\\n",
-    "\\sum_y\\sum_x{P(C_2=V|C_1=V,B_1=B_x,B_2=B_y)P(C_1=V|B_1=B_x)P(B_1=B_x)P(B_2=B_y)}$\n",
-    "\n",
-    "$P(C_2=V|C_1=V,B_1=B_a,B_2=B_a)P(C_1=V|B_1=B_a)P(B_1=B_a)P(B_2=B_a) \\\\\n",
-    "+P(C_2=V|B_2=B_b)P(C_1=V|B_1=B_a)P(B_1=B_a)P(B_2=B_b) \\\\\n",
-    "+P(C_2=V|B_2=B_a)P(C_1=V|B_1=B_b)P(B_1=B_b)P(B_2=B_a) \\\\\n",
-    "+P(C_2=V|C_1=V,B_1=B_b,B_2=B_b)P(C_1=V|B_1=B_b)P(B_1=B_b)P(B_2=B_b)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\frac{1}{2}\\frac{1}{2}(\\frac{29}{39}\\frac{30}{40} \n",
-    "+\\frac{20}{40}\\frac{30}{40}\n",
-    "+\\frac{30}{40}\\frac{20}{40} \n",
-    "+\\frac{19}{39}\\frac{20}{40}) $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(V_2|V_1)=\\frac{P(V_2V_1)}{P(V_1)}=\\sum_i{P(V_2|V_1B_i)P(B_i|V_1)}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So the old posterior becomes the new prior"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(V_2|V_1)=P(V_2|V_1B_1)P(B_1|V_1)+P(V_2|V_1B_2)P(B_2|V_1)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(V_2|V_1)=\\frac{29}{39}\\frac{3}{5}+\\frac{19}{39}\\frac{2}{5} = \\frac{87+38}{39*5}=\\frac{125}{195}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6410256410256411"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "125./195"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$P(X_1, U_1, B) = P(B|X_1, U_1)P(X_1|U_1)P(U_1)=\\frac{29}{39}\\frac{30}{40}\\frac{1}{2}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6205128205128205"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((29/39.)*(30/40.)+(20/40.)*(30/40.)+(30/40.)*(20/40.)+(19/39.)*(20/40.))*0.25/(5/8.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.620253164556962"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "49/79"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.625"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5/8"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\frac{1}{2}\\frac{1}{2}(\\frac{29}{39}\\frac{30}{40} \n",
-    "+\\frac{20}{40}\\frac{30}{40}\n",
-    "+\\frac{30}{40}\\frac{20}{40} \n",
-    "+\\frac{19}{39}\\frac{20}{40}) \\frac{8}{5} $"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6205128205128205"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.5*(3/5*(29/39+20/40) + 2/5*(30/40+19/39))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
